# Graphics_Assignments

./: Repo_Info
Analog_Clock/: CMakeLists.txt  info
Analog_Clock/Solar_System_Clock/: Solar_System_Clock.cpp  shader_solar.frag  shader_solar.vert
Analog_Clock/common/: Sphere.cpp
Analog_Clock/common/include/: Sphere.h  Utils.h
UCG_Assignment_5/Results/Animationkey_F_A_S_R/: animation.ogv
UCG_Assignment_5/src/: helpers.cpp  helpers.h  main.cpp
